--- a/scss/main.scss
+++ b/scss/main.scss
@@ -24,7 +24,7 @@
     }
     &::after {
         // content: '';
-        background: url('/images/bg-main.png') top no-repeat;
+        background: url('./../images/bg-main.png') top no-repeat;
         // background-size: cover;
         position: absolute;
         top: 75px;
@@ -72,7 +72,7 @@
     }
     &::after {
         content: '';
-        background: url('/images/svg/arr-right.svg');
+        background: url('./../images/svg/arr-right.svg');
         width: 36px;
         height: 24px;
         position: absolute;
@@ -163,7 +163,7 @@
         display: block;
         width: 40px;
         height: 40px;
-        background: url('/images/svg/arr-white.svg') center center no-repeat, #346CD9;
+        background: url('./../images/svg/arr-white.svg') center center no-repeat, #346CD9;
         border-radius: 10px 0px;
         position: absolute;
         bottom: 0;
@@ -175,7 +175,7 @@
             transition: all 0.2s ease;
         }
         &:after {
-            background: url('/images/svg/arr-white.svg') center center no-repeat, #4073d8;
+            background: url('./../images/svg/arr-white.svg') center center no-repeat, #4073d8;
         }
     }
 }
